# scikit-rec-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agentic_design.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
examples/: README.md  build_adversarial_rows.py  build_corpus.py  custom_frontend.py  custom_llm.py  custom_prompt.py  custom_tool.py  halluc_corpus.jsonl  label_elicited_rows.py  movielens_hierarchical_session.md  movielens_session.md  qbo_multioutput_session.md  system_prompts.json
examples/customizations/: custom_llm.py  custom_tool.py
examples/transcripts/: movielens_hierarchical_session.md  movielens_session.md
scikit_rec_agent/: __init__.py  agent.py  cli.py  safeguards.py  session.py
scikit_rec_agent/llm/: __init__.py  anthropic.py  base.py  openai.py
scikit_rec_agent/prompts/: __init__.py  _capability.py  _explanations.py  system.py
scikit_rec_agent/tools/: __init__.py  datasets.py  design.py  diagnose.py  evaluation.py  hpo.py  profiling.py  registry.py  splitting.py  sweep.py  training.py  transform.py
tests/: _helpers.py  conftest.py  test_agent_loop.py  test_cli.py  test_import.py  test_prompts.py  test_safeguards.py  test_safeguards_realistic.py
tests/llm/: test_anthropic_adapter.py  test_openai_adapter.py
tests/tools/: test_datasets.py  test_design.py  test_diagnose.py  test_evaluation.py  test_hpo.py  test_profiling.py  test_registry.py  test_splitting.py  test_sweep.py  test_training.py  test_transform.py
